fixed image tab and got rid of console.logs

--- a/frontend/src/components/ImagesModal/ImagesModal.css
+++ b/frontend/src/components/ImagesModal/ImagesModal.css
@@ -18,8 +18,9 @@
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .images-container {
