--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -25,11 +25,33 @@
     transition: all 0.5s ease-out;
 }
 
+.links-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 5px;
+}
+
+.links-profile a {
+    text-decoration: none;
+}
+
+.links-profile a:hover {
+    font-size: 16px;
+    background-color: #382618;
+    color: white;
+    border-radius: 15px;
+    width: 100%;
+    display: block;
+    
+}
 
 .show-info {
     display: flex;
+    justify-content: space-around;
     background-color: whitesmoke;
-    width: 200px;
+    width: 300px;
     height: 100px;
     padding: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
