--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -38,22 +38,24 @@
 }
 
 .links-profile a:hover {
+    display: flex;
+    justify-content: center;
     font-size: 16px;
-    background-color: #382618;
+    background-color: #d2c9b7;
     color: white;
     border-radius: 15px;
     width: 100%;
-    display: block;
-    
 }
 
 .show-info {
     display: flex;
     justify-content: space-around;
     background-color: whitesmoke;
-    width: 300px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width: 120px;
     height: 100px;
-    padding: 20px;
+    padding: 30px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     transition: all 0.5s ease-out;
 }
